tests/baselines/reference/parservoidInQualifiedName2.errors.txt
==== tests/cases/compiler/parservoidInQualifiedName2.ts (1 errors) ====
    var v : x.void;
            ~
!!! parservoidInQualifiedName2.ts(1,9): error TS2095: Cannot find name 'x'.